# FastapiHotelsProject

./: pyproject.toml
app/: main.py
